feat(filter-blocks): support form-block

--- a/packages/plugins/client/src/locale/en-US.json
+++ b/packages/plugins/client/src/locale/en-US.json
@@ -54,6 +54,7 @@
       "Close": "Close",
       "Set the data scope": "Set the data scope",
       "Data blocks": "Data blocks",
+      "Filter blocks": "Filter blocks",
       "Table": "Table",
       "Form": "Form",
       "Select data source": "Select data source",
