--- a/packages/plugins/client/src/locale/zh-CN.json
+++ b/packages/plugins/client/src/locale/zh-CN.json
@@ -54,6 +54,7 @@
       "Close": "关闭",
       "Set the data scope": "设置数据范围",
       "Data blocks": "数据区块",
+      "Filter blocks": "筛选区块",
       "Table": "表格",
       "Form": "表单",
       "Select data source": "选择数据源",
