feat: add 'Connect data blocks' option

--- a/packages/plugins/client/src/locale/en-US.json
+++ b/packages/plugins/client/src/locale/en-US.json
@@ -104,6 +104,7 @@
       "Are you sure you want to delete it?": "Are you sure you want to delete it?",
       "This is a demo text, **supports Markdown syntax**.": "This is a demo text, **supports Markdown syntax**.",
       "Filter": "Filter",
+      "Connect data blocks": "Connect data blocks",
       "Action type": "Action type",
       "Actions": "Actions",
       "Insert": "Insert",
