--- a/packages/plugins/client/src/locale/zh-CN.json
+++ b/packages/plugins/client/src/locale/zh-CN.json
@@ -104,6 +104,7 @@
       "Are you sure you want to delete it?": "你确定要删除吗？",
       "This is a demo text, **supports Markdown syntax**.": "这是一段演示文本，**支持 Markdown 语法**。",
       "Filter": "筛选",
+      "Connect data blocks": "连接数据区块",
       "Action type": "操作类型",
       "Actions": "操作",
       "Insert": "新增",
