feat: support to set operator

--- a/packages/plugins/client/src/locale/en-US.json
+++ b/packages/plugins/client/src/locale/en-US.json
@@ -221,6 +221,7 @@
       "Edit block title": "Edit block title",
       "Block title": "Block title",
       "Pattern": "Pattern",
+      "operater": "operater",
       "Editable": "Editable",
       "Readonly": "Readonly",
       "Easy-reading": "Easy-reading",
@@ -926,6 +927,7 @@
       "Delete field": "Delete field",
       "Required": "Required",
       "Pattern": "Pattern",
+      "operater": "operater",
       "Editable": "Editable",
       "Readonly": "Readonly",
       "Easy-reading": "Easy-reading",
