--- a/packages/plugins/client/src/locale/zh-CN.json
+++ b/packages/plugins/client/src/locale/zh-CN.json
@@ -221,6 +221,7 @@
       "Edit block title": "编辑区块标题",
       "Block title": "区块标题",
       "Pattern": "模式",
+      "operater": "运算符",
       "Editable": "可编辑",
       "Readonly": "只读（禁止编辑）",
       "Easy-reading": "只读（阅读模式）",
@@ -920,6 +921,7 @@
       "Delete field": "删除字段",
       "Required": "必填",
       "Pattern": "模式",
+      "operater": "运算符",
       "Editable": "可编辑",
       "Readonly": "只读（禁止编辑）",
       "Easy-reading": "只读（阅读模式）",
