feat: support to connect association collection

--- a/packages/plugins/client/src/locale/en-US.json
+++ b/packages/plugins/client/src/locale/en-US.json
@@ -19,6 +19,7 @@
       "Time": "Time",
       "Event": "Event",
       "None": "None",
+      "Unconnected": "Unconnected",
       "System settings": "System settings",
       "System title": "System title",
       "Logo": "Logo",
