--- a/packages/plugins/client/src/locale/zh-CN.json
+++ b/packages/plugins/client/src/locale/zh-CN.json
@@ -19,6 +19,7 @@
       "Time": "时间",
       "Event": "事件",
       "None": "无",
+      "Unconnected": "未连接",
       "System settings": "系统设置",
       "System title": "系统名称",
       "Logo": "Logo",
