feat: support Collapse

--- a/packages/plugins/client/src/locale/en-US.json
+++ b/packages/plugins/client/src/locale/en-US.json
@@ -58,6 +58,7 @@
       "Filter blocks": "Filter blocks",
       "Table": "Table",
       "Form": "Form",
+      "Collapse": "Collapse",
       "Select data source": "Select data source",
       "Calendar": "Calendar",
       "Delete events": "Delete events",
@@ -145,6 +146,7 @@
       "Association fields filter": "Association fields filter",
       "PK & FK fields": "PK & FK fields",
       "Association fields": "Association fields",
+      "Optional fields": "Optional fields",
       "System fields": "System fields",
       "General fields": "General fields",
       "Parent collection fields": "Parent collection fields",
