--- a/packages/plugins/client/src/locale/zh-CN.json
+++ b/packages/plugins/client/src/locale/zh-CN.json
@@ -58,6 +58,7 @@
       "Filter blocks": "筛选区块",
       "Table": "表格",
       "Form": "表单",
+      "Collapse": "折叠面板",
       "Select data source": "选择数据源",
       "Calendar": "日历",
       "Delete events": "删除日程",
@@ -145,6 +146,7 @@
       "Association fields filter": "关系筛选",
       "PK & FK fields": "主外键字段",
       "Association fields": "关系字段",
+      "Optional fields": "可选字段",
       "System fields": "系统字段",
       "General fields": "普通字段",
       "Parent collection fields": "父表字段",
